wip: add restaurant module
