# models/user.go
@@ -1,21 +1,10 @@
 package models
 
-import (
-	"errors"
-	"fmt"
-)
-
-type User struct {
-	ID       uint   `json:"id" gorm:"primaryKey;autoIncrement"`
-	Name     string `json:"name" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
-}
-
 type CreateUserInput struct {
-	Name     string `json:"name" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
+	Name         string `json:"name" binding:"required" example:"Nguyen Van A"`
+	Email        string `json:"email" binding:"required,email" example:"restaurant@gmail.com"`
+	Password     string `json:"password" binding:"required,min=8" example:"12345678"`
+	RestaurantID uint   `json:"restaurantId" binding:"required"` // Foreign key
 }
 
 // omitempty is optional
@@ -27,13 +16,15 @@ type UpdateUserInput struct {
 
 func GetUsers() []User {
 	var users []User
-	DB.Find(&users)
+	DB.Model(&User{}).Preload("Restaurant").Find(&users)
 	return users
 }
 
-func CreateUser(user User) User {
-	DB.Create(&user)
-	return user
+func CreateUser(user User) (User, error) {
+	if err := DB.Create(&user).Error; err != nil {
+		return User{}, err
+	}
+	return user, nil
 }
 
 func UpdateUser(id string, user UpdateUserInput) (User, error) {
@@ -44,13 +35,12 @@ func UpdateUser(id string, user UpdateUserInput) (User, error) {
 	if err := DB.Model(&updatedUser).Updates(user).Error; err != nil {
 		return User{}, err
 	}
-	fmt.Println(updatedUser)
 	return updatedUser, nil
 }
 
 func GetUser(id string) (User, error) {
 	var user User
-	if err := DB.First(&user, id).Error; err != nil {
+	if err := DB.Preload("Restaurant").First(&user, id).Error; err != nil {
 		return User{}, err
 	}
 
@@ -59,12 +49,8 @@ func GetUser(id string) (User, error) {
 
 func DeleteUser(id string) error {
 	var user User
-	if err := DB.First(&user, id).Error; err != nil {
-		return errors.New("User not found")
-	}
-
 	if err := DB.Delete(&user, id).Error; err != nil {
-		return errors.New("Internal server error")
+		return err
 	}
 
 	return nil
